loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:6: error: '(' expected but identifier found.
          if estSurBiscuit() 
             ^